--- a/Pages/AboutPage.xaml
+++ b/Pages/AboutPage.xaml
@@ -30,6 +30,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="160"/>
@@ -37,6 +38,7 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}" Content="Version: " Margin="0,0,0,3"/>
             <Label Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}" Content="Spicetify Version: " Margin="0,0,0,3"/>
+            <Label Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelStyle}" Content="Backup Version: " Margin="0,0,0,3"/>
             <ui:SimpleStackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" Spacing="11">
                 <Label x:Name="AppVersionLabel" Style="{StaticResource VersionStyle}" Content="0.0.0"/>
                 <Label x:Name="AppVersionStateLabel" Style="{StaticResource LabelStyle}" FontSize="15" Content=""/>
@@ -45,6 +47,7 @@
                 <Label x:Name="SpicetifyVersionLabel" Style="{StaticResource VersionStyle}" Content="0.0.0"/>
                 <Label x:Name="SpicetifyVersionStateLabel" Style="{StaticResource LabelStyle}" FontSize="15" Content=""/>
             </ui:SimpleStackPanel>
+            <Label Grid.Column="1" Grid.Row="2" x:Name="BackupVersionLabel" Style="{StaticResource VersionStyle}" Content="0.0.0"/>
         </Grid>
         <Grid Margin="0,13,0,0">
             <Grid.RowDefinitions>
